--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,9 @@
   overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
+  font-family: 'Montaga', sans-serif;
 }
+
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
@@ -34,4 +36,27 @@
   padding: 6px 12px;
   border: 1px solid #ccc;
   border-top: none;
+  font-family: 'Montaga', sans-serif;
+}
+
+.tablinks {
+  font-family: 'Montaga', sans-serif;
+}
+
+.storename {
+  background-color: lightgreen;
+  float: right;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+#addCart {
+  margin-top: 10px;
+}
+
+footer {
+  font-size: 11px;
 }
